--- a/crud/frontend/src/app/components/template/header/header.component.css
+++ b/crud/frontend/src/app/components/template/header/header.component.css
@@ -1,4 +1,25 @@
 .header {
+  /* Estudar sobre o display flex */
   display: flex;
+  align-items: center;
   background-color: white;
+
 }
+
+.header a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.header .logo {
+  /* Define a altura máxima do logo dentro do header em px */
+  max-height: 32px;
+}
+
+.title i {
+  padding-left: 25px;
+  padding-right: 5px;
+}
+
+
