--- a/crud/frontend/src/app/components/template/header/header.component.html
+++ b/crud/frontend/src/app/components/template/header/header.component.html
@@ -1,8 +1,16 @@
-<mat-toolbar class="header">
+<mat-toolbar class="header mat-elevation-z4">
   <span>
     <a>
       <!-- caso a imagem não carregue sera apresentado a palavra logo essa é a função do alt -->
-      <img src="../../../../assets/logo-cod3r.png" alt="logo">
+      <img class="logo" src="../../../../assets/logo-cod3r.png" alt="logo">
+    </a>
+  </span>
+  <span class="title">
+    <a>
+        <i class="material-icons">
+          home
+        </i>
+        Aplicação CRUD
     </a>
   </span>
 </mat-toolbar>
